--- a/source/assets/css/blocks/job-search.less
+++ b/source/assets/css/blocks/job-search.less
@@ -15,7 +15,7 @@
     right: 0;
     bottom: 0;
     background: rgba(255, 255, 255, 0.8);
-    z-index: 9999;
+    z-index: 15;
 }
 .spinner {
     margin: 200px auto 0;
@@ -39,7 +39,7 @@
         .opacity(0);
         visibility: hidden;
         bottom: -100px;
-    }
+    } 
 }
 
 .appl-inner {
